--- a/index.html
+++ b/index.html
@@ -1,117 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="fr">
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Clos Marsault</title>
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="   https://cdnjs.cloudflare.com/
-ajax/libs/font-awesome/
-4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="style.css">   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 
-</head>
-
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li id="logo"><a href="#">Clos Marsault</a></li>
-                <li><a href="#langue">Langue</a></li>
-                <li><a href="#reserver">Réserver</a></li>
-                <li><a href="#contact"> Nous contacter</a></li>
-            </ul>
-        </nav>
-        <div id="imagePrincipale">
-            <h1>Clos Marsault</h1>
-            <div id="premierTrait"></div>
-            <h3>Chambres d'hotes</h3>
-        </div>
+      <nav>
+        <ul>
+          <li id="logo"><a href="#">Clos Marsault</a></li>
+          <li><a href="#langue">Langue</a></li>
+          <li><a href="#reserver">Réserver</a></li>
+          <li><a href="#contact">Nous contacter</a></li>
+        </ul>
+      </nav>
+      <div id="imagePrincipale">
+        <h1>Clos Marsault</h1>
+        <div id="premierTrait"></div>
+        <h3>Chambres d'hôtes</h3>
+      </div>
 
     </header>
     <section id="presentation">
-        <div id="textIntro">
-            <h2>Un lieu unique, pour un séjour unique
-            </h2>
-            <p>Lorem, ipsum dolor sit amet consectetur 
-                adipisicing elit. Corporis debitis ipsam maxime 
-                eius distinctio accusamus nostrum neque
-                 minus ut eligendi a voluptates, animi error
-                  assumenda laboriosam facilis ducimus culpa 
-                  sunt? Nostrum vel harum iusto quos aspernatur,
-                   porro voluptatibus quidem possimus explicabo 
-                   beatae corrupti, obcaecati reiciendis delectus
-                    sit veritatis dolores, iste neque quod 
-                    voluptatem quis minus magni. Consequuntur,
-                     illo fuga! Ratione odio soluta ab cumque
-                      voluptas vero ullam optio, quasi esse sunt
-                       velit incidunt. Recusandae officiisobcaecati
-                        et voluptas quia beatae?</p>
-            <div id="presentation">
-                <div class="imagePrincipale">
-                    <h4>Nous trouver</h4>
-                    <a href="#">
-                        <img src="pexel/carte.jpg.JPG" alt="carte">
-                    </a>
-                </div>
-                <div class="imagePrincipale">
-                    <h4>Coté chambre</h4>
-                    <a href="#"><img src="pexel/chambre.jpg.JPG" alt="chambre"></a>
-                </div>
-                <div class="imagePrincipale">
-                    <h4>Coté cuisine</h4>
-                    <a href="#"><img src="pexel/repas.jpg2.JPG" alt="repas"></a>
-                </div>
-            </div>
+      <div id="texteIntro">
+        <h2>Un lieu unique, pour un séjour unique</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat ex veniam id quas optio, veritatis quae, ipsum similique ad amet aliquam delectus! Recusandae itaque doloremque quos velit perspiciatis nulla autem voluptatibus qui, eius quod maiores soluta necessitatibus consequatur eligendi, laborum ex eos ipsa aliquid tempora. Sunt non odio laudantium consequatur dolorum, quisquam earum repudiandae ducimus pariatur doloremque modi assumenda culpa, adipisci unde quo! Labore, sit cupiditate a cumque quibusdam, error voluptates quis tempore repudiandae nihil amet sint vel eius libero?</p>
+      </div>
+      <div id="prestations">
+        <div class="imagesPrestations">
+          <h4>Nous trouver</h4>
+          <a href="#"><img src="./media/carte.jpg.JPG" alt="carte"></a>
         </div>
+        <div class="imagesPrestations">
+          <h4>Coté chambres</h4>
+          <a href="#"><img src="./media/chambre.jpg.JPG" alt="chambre"></a>
+        </div>
+        <div class="imagesPrestations">
+          <h4>Coté cuisine</h4>
+          <a href="#"><img src="./media/repas.jpg2.JPG" alt="repas"></a>
+        </div>
+      </div>
+
     </section>
     <section id="tourisme">
-        <h2>Et à découvirir...</h2>
-        <ul>
-            <li id="ocean">
-                <p>L'océan Atlantique</p>
-            </li>
-            <li id="chateau">
-                <p>Les chateaux du Médoc</p>
-            </li>
-            <li id="phare">
-                <p>L'estuaire de la Gironde</p>
-            </li>
-            <li id="vignes">
-                <p>Le vignonoble Bordelais</p>
-            </li>
-        </ul>
+      <h2>Et tant à découvrir...</h2>
+      <ul>
+        <li id="ocean"><p>L'océan Atlantique</p></li>
+        <li id="chateau"><p>Les châteaux du Médoc</p></li>
+        <li id="phare"><p>L'estuaire de la Gironde</p></li>
+        <li id="vignoble"><p>Le vignoble Bordelais</p></li>
+      </ul>
     </section>
     <footer>
-        <h2>Contactez-nous</h2>
-        <form>
-            <input placeholder="nom">
-            <input placeholder=" E-mail">
-            <textarea placeholder="Votre message 
-            ici..."></textarea>
-            <input type="submit" value="Envoyer">
-        </form>
-        <div id="deuxiemeTrait"></div>
-        <div id="copyrightEIcons"></div>
+      <h2 id="contact">Contactez-nous</h2>
+      <form>
+        <input placeholder="Nom">
+        <input placeholder="E-mail">
+        <textarea placeholder="Votre message ici..."></textarea>
+        <button>Envoyer</button>
+      </form>
+      <div id="deuxiemeTrait"></div>
+      <div id="copyrightEtIcons">
         <div id="copyright">
-            <span>©fromcratch(); 2020</span>
-            <div id="icos">
-                <a href="http://WWW.twitter.fr">
-                    <i class="fa fa-twitter"></i>
-                </a>
-                <a href="http://WWW.instragme.com">
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>
-                <a href="http://WWW.facebook.com">
-                    <i class="fa fa-facebook"></i>
-                </a>
-            </div>
+          <span>© fromScratch(); 2020</span>
         </div>
+        <div id="icons">
+          <a href="http://www.twitter.fr"><i class="fa fa-twitter"></i></a>
+          <a href="http://www.facebook.fr"><i class="fa fa-facebook"></i></a>
+          <a href="http://www.instagram.com"><i class="fa fa-instagram"></i></a>
+
+        </div>
+      </div>
 
     </footer>
-
-</body>
+  </body>
 
 </html>
